# solving-poker

./: .gitignore  CMakeLists.txt  README.md
Kuhn/: cfr.cpp  cfr.hpp  commontypes.hpp  kuhngame.cpp  kuhngame.hpp  kuhntypes.hpp  main.cpp  types.hpp
Leduc/: leducgame.cpp  leducgame.hpp  leductypes.hpp  main.cpp
analysis/: plot_cfr_logs.ipynb
common/: cfr.hpp  commontypes.hpp  datawriter.hpp  exploit.hpp
